<resources>
    <string name="app_name">自动化计费测试工具</string>
    <string name="number">初始化短信号码:</string>
    <string name="numberHint">请输入要发送到哪个号码</string>
    <string name="delay">发送第2条短信前的延时(s):</string>
    <string name="delayHint">请输入要延时的秒数</string>
    <string name="content">短信内容:</string>
    <string name="contentHint">请输入要发送的内容</string>
    <string name="send1">发送上面这条短信</string>
    <string name="test">测试</string>
    <string name="port">短信2的port: </string>
    <string name="portnumber">短信2的port number: </string>
    <string name="portHint">请输入端口</string>
    <string name="portnumberHint">请输入端口号</string>
    <string name="byManual">是否手工输入参数</string>
    <string name="defaultdelay">2</string>
    <string name="inputip">ip(可按需要修改):</string>
    <string name="defaultip">117.136.5.16</string>
</resources>
