<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  tools:context="com.example.administrator.smssend.data1.Data1Activity">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/inputip"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/ip"
                        android:text="@string/defaultip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/delayHint"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/number"
                        android:textSize="@dimen/textSize"/>

                    <EditText
                        android:id="@+id/number1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/numberHint"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/content"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/content1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/contentHint"/>
                </LinearLayout>

                <Button
                    android:visibility="gone"
                    android:id="@+id/send1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginTop="@dimen/margin"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/send1"
                    tools:ignore="RtlHardcoded"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/delay"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/delay"
                        android:text="@string/defaultdelay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/delayHint"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/port"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/port"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/portHint"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/portnumber"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/portnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/portnumberHint"
                        android:inputType="number"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:text="@string/content"
                        android:textSize="@dimen/textSize"
                        tools:ignore="RtlHardcoded"/>

                    <EditText
                        android:id="@+id/content2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin"
                        android:layout_marginRight="@dimen/margin"
                        android:layout_marginTop="@dimen/margin"
                        android:hint="@string/contentHint"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/processInfo"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            tools:ignore="RtlHardcoded">

            <Button
                android:layout_alignParentLeft="true"
                android:id="@+id/send2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="test"
                android:paddingLeft="@dimen/margin"
                android:paddingRight="@dimen/margin"
                android:text="@string/test"
                tools:ignore="RtlHardcoded"/>
            <LinearLayout
                android:layout_toRightOf="@id/send2"
                android:layout_marginRight="@dimen/margin"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded">
                <TextView
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/byManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Switch
                    android:id="@+id/byManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</layout>
